Add application relation into rules and add events post endpoint
